--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,13 @@
-sonar.projectKey=kirankhetariyaTJCG_github_e016dbf8-ab09-46ed-a5fa-5192c0fa9ca2
+sonar.projectKey=kirankhetariyaTJCG_github
+sonar.organization=kirankhetariyatjcg
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=github
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
