--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
-sonar.projectKey=kirankhetariyaTJCG_github
+#sonar.projectKey=kirankhetariyaTJCG_github
 sonar.organization=kirankhetariyatjcg
+
+sonar.projectKey=kirankhetariyaTJCG_github_e016dbf8-ab09-46ed-a5fa-5192c0fa9ca2
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=github
